[package]
name = "rust-ecosystem-simulator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.1"
vecmath = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"